# zipcraft.py

./: .gitlab-ci.yml  ReadMe.md  pyproject.toml  setup.cfg
tests/: tests.py
zipcraft/: __init__.py
