[metadata]
name = zipcraft
version = 0.1
author = KOLANICH
url = https://github.com/KOLANICH-libs/zipcraft.py
description = Doing some "forbidden" things with `zipfile`s.
long_description = file: ReadMe.md
keywords = zipcraft
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.4
zip_safe = True
packages = find:
setup_requires = setuptools>=61.2.0; wheel; setuptools_scm[toml]>=3.4.3
